--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -201,8 +201,8 @@ p
     background-repeat: no-repeat
     background-position: top 75px left
 .matches__item
-    width: 115px 
-    height: 115px 
+    width: 200px 
+    height: 200px 
     border-radius: 50%
     border: 4px solid #D1B7F2
     padding: 4px
@@ -244,10 +244,19 @@ p
     white-space: nowrap
 
 .matches__item--2
-    width: 65px 
-    height: 65px
+    width: 120px 
+    height: 120px
+.matches__item--3
+    width: 220px 
+    height: 220px
+    margin-left: 80px
+.matches__item--4 
+    width: 280px 
+    height: 280px
+.matches__item--5 
+    width: 160px 
+    height: 160px
 .matches-list
-    width: 375px 
     margin-left: auto 
     margin-right: auto
     padding-bottom: 35px
@@ -268,7 +277,10 @@ p
     font-size: 18.3px 
     img 
         margin-left: 10px
-
+.row-center 
+    margin-top: -60px
+.row:last-child
+    margin-top: -40px
 
 
 @import "media"
