--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -22,6 +22,26 @@
 /* Small Devices, Tablets */
 @media only screen and (max-width : 600px)
 	/**/
+	.matches__item
+		width: 30.667vw
+		height: 30.667vw
+		font-size: 70%
+	.matches__item--2 
+		width: 17.333vw
+		height: 17.333vw
+	.matches__item--3
+		width: 30.933vw
+		height: 30.933vw
+	.matches__item--4
+		width: 39.200vw
+		height: 39.200vw
+	.matches__item--5
+		width: 26.133vw
+		height: 26.133vw
+	.row-center
+		margin-top: -10vw
+	.matches__item--3
+		margin-left: 15vw
 	
 
 /* Extra Small Devices, Phones */
@@ -107,25 +127,7 @@
 		margin-bottom: 11.200vw
 		font-size: 4.880vw 
 		height: 13.600vw
-	.matches__item
-		width: 30.667vw
-		height: 30.667vw
-	.matches__item--2 
-		width: 17.333vw
-		height: 17.333vw
-	.matches__item--3
-		width: 30.933vw
-		height: 30.933vw
-	.matches__item--4
-		width: 39.200vw
-		height: 39.200vw
-	.matches__item--5
-		width: 26.133vw
-		height: 26.133vw
-	.row-center
-		margin-top: -10vw
-	.matches__item--3
-		margin-left: 15vw
+	
 	.row:last-child 
 		margin-top: -8vw
 	.matches-list
