fix button position

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -117,13 +117,13 @@
 		margin-bottom: 8.533vw
 	.quize-title
 		font-size: 8.533vw
-		margin-bottom: 8.533vw
+		margin-bottom: 0
 	.quize-btn
 		font-size: 4.533vw
 		height: 12.800vw
 		margin-bottom: 4.267vw
 	.next-btn
-		margin-top: 30.667vw 
+		margin-top: 20vw 
 		margin-bottom: 11.200vw
 		font-size: 4.880vw 
 		height: 13.600vw
@@ -143,6 +143,20 @@
 		background-size: 24vw
 	.matches-list
 		width: 100%
+	.quize-content
+		.container
+			height: calc(100vh - 50vw)
+			display: flex
+			flex-direction: column
+			justify-content: space-between
+		.next-btn
+			margin-top: 0
+	.quize-title
+		min-height: 38vw
+		display: flex
+		align-items: center
+	.quize-content-bg .container
+		height: auto
 
 	
 	
