--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -145,18 +145,21 @@
 		width: 100%
 	.quize-content
 		.container
-			height: calc(100vh - 50vw)
+			height: calc(100vh - 30vw)
 			display: flex
 			flex-direction: column
 			justify-content: space-between
 		.next-btn
 			margin-top: 0
+			margin-bottom: 15vw
 	.quize-title
 		min-height: 38vw
 		display: flex
 		align-items: center
 	.quize-content-bg .container
 		height: auto
+	.steps-row 
+		margin-bottom: 0
 
 	
 	
