--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -282,7 +282,22 @@ p
 .row:last-child
     margin-top: -40px
 
-    
+//start style updates
+.step1,
+.step2,
+.step3,
+.step4,
+.steps-row
+    display: none
+.special-offer__content
+    background-image: none
+.lets-try-button
+    cursor: pointer
+.next-btn
+    display: none
+.next-btn.show
+    display: flex
+//end style updates   
 
 
 @import "media"
